fix about text overflow, update gemfile

--- a/assets/about.css
+++ b/assets/about.css
@@ -31,7 +31,8 @@ td a {
 	line-height: 130%;
 	text-align: justify;
 	text-wrap: balance;
-}
+}
+
 #bio-links {
 	font-family: 'eurofurence55';
 	margin-bottom: 25px;
@@ -47,6 +48,12 @@ td a {
 }
 #bio-links-compact {
 	display: none;
+}
+
+@media (min-width: 950px) {
+	#bio-pics {
+		padding-bottom: 10%;
+	}
 }
 
 @media (max-width: 579px) {
